--- a/Lesson02/vidu3.html
+++ b/Lesson02/vidu3.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>ádfadf</title>
+	<title>dfgh</title>
 </head>
 <body>
-ádf
-gdfh
+sdfg
+ưetr
 </body>
 </html>
