--- a/Lesson04/email form.html
+++ b/Lesson04/email form.html
@@ -12,16 +12,16 @@
 		<br>
 		<form>
 			<ul style="list-style-type: none;">
-				<li id="compose">To: <input required="true" type="email" name="email" size="50"></li> 
-				<li id="compose">From: <input required="true" type="email" name="email" size="50"></li>
-				<li id="compose">CC: <input type="email" name="email" size="50"></li>
-				<li id="compose">Subject: <input type="text" name="Subject" size="50"></li>
-				<li id="compose">Message: <input type="text" name="Message" size="50"></li>
+				<li id="compose">To: <input required="true" type="email" name="email" size="40"></li> 
+				<li id="compose">From: <input required="true" type="email" name="email" size="40"></li>
+				<li id="compose">CC: <input type="email" name="email" size="40"></li>
+				<li id="compose">Subject: <input type="text" name="Subject" size="40"></li>
+				<li id="compose">Message: <input type="text" name="Message" size="40"></li>
 			</ul>
 		</form>
 		<a href="status.html"><button style="margin-left: 65px; margin-top: -20px">Summit</button></a>
 		<button style="margin-left: 5px; margin-top: -20px">Cancel</button>
 	</div>
-	<a href="email editor help.html" class="imgHelp" style="position: absolute; margin-top: 20px; margin-right: 10px; font-size: 20px; font-family:arial; color: blue; font-weight: bold;"><b>Help</b></a>
+	<a href="email editor help.html" class="imgHelp" style="position: absolute; margin-top: 20px; margin-right: 10px; font-size: 20px; color: blue; font-weight: bold;"><button>Help</button></a>
 </body>
 </html>
