--- a/Lesson04/table_b2.html
+++ b/Lesson04/table_b2.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div style="margin-left: 190px">Airplane Comparision</div> 
-	<table border="1" cellspacing="0" cellpadding="3" bo>
+	<table border="1" cellspacing="0" cellpadding="3">
 		<thead style="font-style: bold;" >
 			<tr>
 				<th rowspan="2"></th>
