--- a/Lesson02/Grammar.html
+++ b/Lesson02/Grammar.html
@@ -4,11 +4,11 @@
 	<title>English Grammar</title>
 	<style type="text/css">
 		.section{
-			text-align: center;
+			text-align: justify;
 		}
 		.subsection{
-			margin-left: 5%;
-			text-align: center;
+			text-indent: 5%;
+			text-align: justify;
 		}
 		h2,h3{
 			text-align: left;
@@ -19,42 +19,38 @@
 	</style>
 </head>
 <body>
+	<div class="section">
+		<h2>nouns</h2>
+		A <b>noun</b> represents a person, place, animal, thing or an idea.
+	</div>
 
-<p class="section">
-	<h2>nouns</h2>
-	A <b>noun</b> represents a person, place, animal, thing or an idea.
-</p>
-	<h3>kinds of noun</h3>
-		Nouns are classified as follows:
-	<ol class="subsection"; style="list-style-type: amharic;">
-		<li><b>Proper:</b> It is the name of a particular object, whether place, person, animal, idea or thing.</li>
-		<li><b>Common:</b> It is the name possessed by things in general.</li>
-		<li><b>Collective:</b> It is the name representing a group of things.</li>
-		<li><b>Abstract:</b> It is the name representing qualities, emotions, conditions or actions.</li>
-	</ol>
+	<div class="subsection">
+		<h3>kinds of noun</h3>
+		<p style="text-indent: 5%">Nouns are classified as follows:</p> 
+		<ol style="list-style-type: amharic;">
+			<li><b>Proper:</b> It is the name of a particular object, whether place, person, animal, idea or thing.</li>
+			<li><b>Common:</b> It is the name possessed by things in general.</li>
+			<li><b>Collective:</b> It is the name representing a group of things.</li>
+			<li><b>Abstract:</b> It is the name representing qualities, emotions, conditions or actions.</li>
+		</ol>
+	</div>
 
-<div class="sub_section">
-			<p >Nouns are classified as follows:</p>
-			<p ><b>Proper:</b> It is the name of particular object, whether person, place, animal, idea or thing.</p>
-			<p ><b>Common:</b> It is the name possessed by things in general.</p>
-			<p ><b>Collective:</b> It is the name representing a group of things.</p>
-			<p><b>Abstract:</b> It is the name representing qualities, emotions, conditions or actions.</p>
-		</div>
+	<div class="section">
+		<h2>pronouns</h2>
+		<br>
+		A <b>pronoun</b> is a word used in place of a noun. A pronoun is generally used to avoid repetition of a noun.
+	</div>
 
-
-<h2>pronouns</h2>
-<br>
-A <b>pronoun</b> is a word used in place of a noun. A pronoun is generally used to avoid repetition of a noun.
-<h3>kinds of pronoun</h3>
-<br>
-Pronouns are classified as follows:
-<ol style="list-style-type: amharic;">
-	<li><b>Personal pronouns:</b> It refers to a specific noun and used as a substitude of the noun.</li>
-	<li><b>Interrogative pronouns:</b> It stands as the answer to a question about a person, place or thing.</li>
-	<li><b>Relative pronouns:</b> It relates to a noun, pronoun, word or expression preceeding it in the sentence, and at the same time connects two statements.</li>
-	<li><b>Demonstrative pronouns:</b> A noun or pronoun is specified and identified by it.</li>
-	<li><b>Reflexive pronouns:</b> It usually follows a noun or pronoun and used to emphasize the subject.</li>
-</ol>
-
+	<div class="subsection">
+		<h3>kinds of pronoun</h3>
+		<p style="text-indent: 5%">Pronouns are classified as follows:</p> 
+		<ol style="list-style-type: amharic;">
+			<li><b>Personal pronouns:</b> It refers to a specific noun and used as a substitude of the noun.</li>
+			<li><b>Interrogative pronouns:</b> It stands as the answer to a question about a person, place or thing.</li>
+			<li><b>Relative pronouns:</b> It relates to a noun, pronoun, word or expression preceeding it in the sentence, and at the same time connects two statements.</li>
+			<li><b>Demonstrative pronouns:</b> A noun or pronoun is specified and identified by it.</li>
+			<li><b>Reflexive pronouns:</b> It usually follows a noun or pronoun and used to emphasize the subject.</li>
+		</ol>
+	</div>
 </body>
 </html>
