--- a/Lesson08/formpayment.html
+++ b/Lesson08/formpayment.html
@@ -4,34 +4,19 @@
 	<title>Purchase Order Form</title>
 	<style type="text/css">
 		.panel{
-			border: solid grey 1px;
-			background-color: #ccf0c9;
-			width:1000px; 
+			border: solid grey 1px; background-color: #ccf0c9; width:1000px; 
 		}
 
 		.panel-heading{
-			background-color: #babbf5;
-			font-size: x-large;
-			border: solid grey 1px;
-			width: 250px;
-			color:blue;
-			font-weight: bold; 
-			padding: 10px;
-			margin-top: 10px;
-			margin-left: 10px;
+			background-color: #babbf5; font-size: x-large; border: solid grey 1px; width: 250px; color:blue; font-weight: bold; padding: 10px; margin-top: 10px; margin-left: 10px;
 		}
 
 		.panel-body{
-			padding-left: 10px;
-			padding-top: 5px;
-			color: #373ae6;
-			font-weight: bold;
+			padding-left: 10px; padding-top: 5px; color: #373ae6; font-weight: bold;
 		}
 
 		.form-group{
-			color: black;
-			font-weight: normal;
-			padding: 5px;
+			color: black; font-weight: normal; padding: 5px;
 		}
 	</style>
 </head>
@@ -44,17 +29,20 @@
 				<table border="1" cellspacing="2" cellpadding="3" style="border-color: blue">
 					<tr>
 						<td>Product:</td>
-						<td><select id="product" onchange="enable1()" required="true">
+						<td><select id="product" onchange ="enable1()" required="true" >
 							<option>--Select--</option>
+							<option>Comfort Sleeper</option>
+							<option>Morgan Kids Bed</option>
+							<option>Entertainment Cabinet</option>
 						</select></td>
 					</tr>
 					<tr>
 						<td>Unit Price($):</td>
-						<td><input type="number" name="price" id="price" onfocus="onfocus()" onkeyup="updateTotalPrice()" required="true"></td>
+						<td><input type="number" name="price" id="price" onfocus="onfocus()" onkeyup="updateTotalPrice()" required="true" disabled="true"></td>
 					</tr>
 					<tr>
 						<td>Quantity:</td>
-						<td><input type="number" name="quantity" id="quantity" onfocus="onfocus()" onkeyup="updateTotalPrice()" required="true"></td>
+						<td><input type="number" name="quantity" id="quantity" onfocus="onfocus()" onkeyup="updateTotalPrice()" onkeypress="quantityno()" required="true" disabled="true"></td>
 					</tr>
 					<tr>
 						<td>Total Price($):</td>
@@ -88,33 +76,22 @@
 					<tr>
 						<td>Credit Card Number:</td>
 						<td>
-							<input type="number" name="cardnumber" id="cardnumber" onfocus="onfocus()" style="width: 50px" maxlength="4" required="true">
-							<input type="number" name="cardnumber" id="cardnumber" onfocus="onfocus()" style="width: 50px" maxlength="4" required="true">
-							<input type="number" name="cardnumber" id="cardnumber" onfocus="onfocus()"style="width: 50px" maxlength="4" required="true"
-							<input type="number" name="cardnumber" id="cardnumber" onfocus="onfocus()"style="width: 50px" maxlength="4" required="true">
+							<input type="number" name="cardnumber" id="cardnumber1" onfocus="onfocus()" size="5" maxlength="4" required="true" disabled="true" onkeypress="cardno1()">
+							<input type="number" name="cardnumber" id="cardnumber2" onfocus="onfocus()" size="5" maxlength="4" required="true" disabled="true" onkeypress="cardno2()">
+							<input type="number" name="cardnumber" id="cardnumber3" onfocus="onfocus()" size="5" maxlength="4" required="true" disabled="true" onkeypress="cardno3()">
+							<input type="number" name="cardnumber" id="cardnumber4" onfocus="onfocus()" size="5" maxlength="4" required="true" disabled="true" onkeypress="cardno4()">
 						</td>
 					</tr>
 				</table>
 			</div>
 		</div>
 		<div style="padding-left: 10px ">
-			<button type="button">Submit</button>	
-			<button>Reset</button>
+			<input type="button" name="submit" value="Submit" onclick="submit()">
+			<input type="button" name="reset" value="Reset" onclick="reset()">
 		</div>
 	</div>
 
 	<script type="text/javascript">
-		var productList = {
-			"Comfort Sleeper":[],
-			"Morgan Kids Bed":[],
-			"Entertainment Cabinet":[]
-		}
-
-		var productTag = document.getElementById('product')
-		for(var key in productList) {
-			productTag.innerHTML += `<option value='${key}'>${key}</option>`
-		}
-
 		function onfocus(){
 			var inputList = document.getElementsByTagName('input')
 			console.log(inputList)
@@ -126,18 +103,26 @@
 		}
 
 		function enable1(){
-			if(document.getElementsById('product').value = '--Select--'){
-				document.getElementById('price').disabled = true;
-				document.getElementById('quantity').disabled = true;
-			}else{
-				document.getElementById('price').disabled = false;
-				document.getElementById('quantity').disabled = false;
+			var product=document.getElementById('product').value;
+			if(product = 'Comfort Sleeper'){
+				document.getElementById('price').value=650
+                document.getElementById('quantity').disabled=false
+			} else if (product = 'Morgan Kids Bed'){
+				document.getElementById('price').value=975
+                document.getElementById('quantity').disabled=false
+			} else if (product = 'Entertainment Cabinet'){
+				document.getElementById('price').value=480
+                document.getElementById('quantity').disabled=false
 			}
 		}
 
 		function enable2(){
-			if(document.getElementById('card').value = '--Select--'){
-				document.getElementById('cardnumber').disabled = true;
+			var card=document.getElementById('card').value
+			if (card != '--Select--'){
+				document.getElementById('cardnumber1').disabled=false
+				document.getElementById('cardnumber2').disabled=false
+				document.getElementById('cardnumber3').disabled=false
+				document.getElementById('cardnumber4').disabled=false
 			}
 		}
 
@@ -147,6 +132,41 @@
 			totalprice = price * quantity
 			document.getElementById('totalprice').value = totalprice
 		}
+
+		function quantityno() {
+            if(isNaN(document.getElementById('quantity').value)=true){
+                alert('Enter Number Only!')
+                document.getElementById('quantity').value=''
+            }
+        }
+
+        function submit(){
+        	 if(document.getElementById('product').value!='--Select--' && document.getElementById('price').value!='' && document.getElementById('quantity').value!='' && document.getElementById('totalprice').value!='' && document.getElementById('fname').value!='' && document.getElementById('address').value!='' && document.getElementById('card').value!='--Select--' && document.getElementById('cardnumber1').value!='' && document.getElementById('cardnumber2').value!='' && document.getElementById('cardnumber3').value!='' && document.getElementById('cardnumber4').value!=''){
+                alert('Your form has been submitted successfully!')
+            }
+            else{
+                alert('Please fill all information!')
+            }
+        }
+
+        function reset(){
+        	document.getElementById('product').value='--Select--'
+        	document.getElementById('price').value=''
+        	document.getElementById('quantity').value=''
+        	document.getElementById('quantity').disabled=true
+        	document.getElementById('totalprice').value=''
+        	document.getElementById('fname').value=''
+        	document.getElementById('address').value=''
+        	document.getElementById('card').value='--Select--'
+        	document.getElementById('cardnumber1').value=''
+        	document.getElementById('cardnumber2').value=''
+        	document.getElementById('cardnumber3').value=''
+        	document.getElementById('cardnumber4').value=''
+        	document.getElementById('cardnumber1').disabled=true
+        	document.getElementById('cardnumber2').disabled=true
+        	document.getElementById('cardnumber3').disabled=true
+        	document.getElementById('cardnumber4').disabled=true
+        }
 	</script>
 </body>
 </html>
