--- a/Lesson03/Attendance.html
+++ b/Lesson03/Attendance.html
@@ -6,273 +6,11 @@
 </head>
 <body>
 	<h2 style="text-align: center">Attendance Sheet</h2>
-
-	<table id="tablesectionOne" border="1" cellspacing="0" cellpadding="3" style="width: 360px">
-		<tr class="CAPTION">
-			<th colspan="8">WEEK 1</th> 
-		</tr>
-		<tr>
-			<th></th>
-			<th>Mon</th>
-			<th>Tue</th>
-			<th>Wed</th>
-			<th>Thu</th>
-			<th>Fri</th>
-			<th>Sat</th>
-			<th>Total</th>
-		</tr>
-		<tr>
-			<th>John</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th></th>
-			<th>P</th>
-			<th>5</th>
-		</tr>
-		<tr>
-			<th>Smith</th>
-			<th></th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th></th>
-			<th>P</th>
-			<th>4</th>
-		</tr>
-		<tr>
-			<th>David</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>6</th>
-		</tr>
-		<tr>
-			<th>Mark</th>
-			<th>P</th>
-			<th></th>
-			<th>P</th>
-			<th></th>
-			<th>P</th>
-			<th></th>
-			<th>3</th>
-		</tr>
-		<tr class="CAPTION">
-			<th colspan="8">WEEK 1</th> 
-		</tr>
-		<tr>
-			<th></th>
-			<th>Mon</th>
-			<th>Tue</th>
-			<th>Wed</th>
-			<th>Thu</th>
-			<th>Fri</th>
-			<th>Sat</th>
-			<th>Total</th>
-		</tr>
-		<tr>
-			<th>John</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th></th>
-			<th>P</th>
-			<th>5</th>
-		</tr>
-		<tr>
-			<th>Smith</th>
-			<th></th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th></th>
-			<th>P</th>
-			<th>4</th>
-		</tr>
-		<tr>
-			<th>David</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>6</th>
-		</tr>
-		<tr>
-			<th>Mark</th>
-			<th>P</th>
-			<th></th>
-			<th>P</th>
-			<th></th>
-			<th>P</th>
-			<th></th>
-			<th>3</th>
-		</tr>
-		<tr class="CAPTION">
-			<th colspan="8">WEEK 1</th> 
-		</tr>
-		<tr>
-			<th></th>
-			<th>Mon</th>
-			<th>Tue</th>
-			<th>Wed</th>
-			<th>Thu</th>
-			<th>Fri</th>
-			<th>Sat</th>
-			<th>Total</th>
-		</tr>
-		<tr>
-			<th>John</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th></th>
-			<th>P</th>
-			<th>5</th>
-		</tr>
-		<tr>
-			<th>Smith</th>
-			<th></th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th></th>
-			<th>P</th>
-			<th>4</th>
-		</tr>
-		<tr>
-			<th>David</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>6</th>
-		</tr>
-		<tr>
-			<th>Mark</th>
-			<th>P</th>
-			<th></th>
-			<th>P</th>
-			<th></th>
-			<th>P</th>
-			<th></th>
-			<th>3</th>
-		</tr>
-		<tr class="CAPTION">
-			<th colspan="8">WEEK 1</th> 
-		</tr>
-		<tr>
-			<th></th>
-			<th>Mon</th>
-			<th>Tue</th>
-			<th>Wed</th>
-			<th>Thu</th>
-			<th>Fri</th>
-			<th>Sat</th>
-			<th>Total</th>
-		</tr>
-		<tr>
-			<th>John</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th></th>
-			<th>P</th>
-			<th>5</th>
-		</tr>
-		<tr>
-			<th>Smith</th>
-			<th></th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th></th>
-			<th>P</th>
-			<th>4</th>
-		</tr>
-		<tr>
-			<th>David</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>6</th>
-		</tr>
-		<tr>
-			<th>Mark</th>
-			<th>P</th>
-			<th></th>
-			<th>P</th>
-			<th></th>
-			<th>P</th>
-			<th></th>
-			<th>3</th>
-		</tr>
-		<tr class="CAPTION">
-			<th colspan="8">WEEK 1</th> 
-		</tr>
-		<tr>
-			<th></th>
-			<th>Mon</th>
-			<th>Tue</th>
-			<th>Wed</th>
-			<th>Thu</th>
-			<th>Fri</th>
-			<th>Sat</th>
-			<th>Total</th>
-		</tr>
-		<tr>
-			<th>John</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th></th>
-			<th>P</th>
-			<th>5</th>
-		</tr>
-		<tr>
-			<th>Smith</th>
-			<th></th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th></th>
-			<th>P</th>
-			<th>4</th>
-		</tr>
-		<tr>
-			<th>David</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>P</th>
-			<th>6</th>
-		</tr>
-		<tr>
-			<th>Mark</th>
-			<th>P</th>
-			<th></th>
-			<th>P</th>
-			<th></th>
-			<th>P</th>
-			<th></th>
-			<th>3</th>
-		</tr>
-	</table>
+	<div style="text-align: center;">
+		<button style="background-color: #baedb9; color: black"><a href="week1.html">WEEK 1</a></button>
+		<button style="background-color: #baedb9; color: black"><a href="week2.html">WEEK 2</a></button>
+		<button style="background-color: #baedb9; color: black"><a href="week3.html">WEEK 3</a></button>
+		<button style="background-color: #baedb9; color: black"><a href="week4.html">WEEK 4</a></button>
+	</div>
 </body>
 </html>
