--- a/Lesson10/intro.html
+++ b/Lesson10/intro.html
@@ -23,10 +23,10 @@
 </head>
 <body>
 	<div class="header">
-		<img src="https://i.pinimg.com/originals/6a/5b/dd/6a5bddcc012dbd7ca4b616fb4b128b9c.jpg" width="80" height="80">
-		<div style="margin-top: -9%; margin-left: 8%">
+		<img src="https://casseycds.net/uploads/logo/1x8xv_logo-2.png" width="200" height="80">
+		<div style="margin-top: -9%; margin-left: 20%">
 			<h2>CASSEY CD</h2> 
-			<small>SHOP ĐĨA GỐC</small>
+			<small>SHOP ĐĨA GỐC UY TÍN</small>
 		</div>
 		<hr>
 		<table style="width: 1000px">
