--- a/Lesson11/bai1.html
+++ b/Lesson11/bai1.html
@@ -15,11 +15,11 @@
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
-	<meta >
+	<meta name='viewport' content='width=device-width, initial-scale=1'>
 	<script src="https://kit.fontawesome.com/yourcode.js"></script>
 </head>
 <body>
-	<div class="container-fluid" style="background-color: black">
+	<div class="container-fluid">
 		<ul class="nav">
 		 	<li class="nav-item">
 		    	<a class="nav-link disabled" href="#">GokiSoft</a>
@@ -42,9 +42,9 @@
 		  	<li class="nav-item">
 		    	<a class="nav-link" style="" href="#">Dang ki</a>
 		  	</li>
-		  	<i class="fas fa-sign-in-alt"></i>
+		  	
 		  	<li class="nav-item">
-		    	<a class="nav-link" href="#">Dang nhap</a>
+		    	<a class="nav-link" href="#"><i class="fas fa-sign-in-alt"></i>Dang nhap</a>
 		  	</li>
 		</ul>
 	</div>
@@ -53,7 +53,7 @@
 			<div class="panel-body">
 				<table class="table table-bordered table-hover">
 					<div class="panel-heading" style="background-color: blue ">
-						Quan Ly Thong Tin Sinh Vien
+						<i class="fas fa-cloud"></i>Quan Ly Thong Tin Sinh Vien
 					</div>
 					<table class="table table-bordered table-hover">
 						<thead>
