--- a/Lesson11/bai1.html
+++ b/Lesson11/bai1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Bootstrap/JQuery Tutorial</title>
+	<title></title>
 	<meta charset="utf-8">
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -16,94 +16,88 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
-	<script src="https://kit.fontawesome.com/yourcode.js"></script>
+	<script src='https://kit.fontawesome.com/a076d05399.js'></script>
 </head>
 <body>
 	<div class="container-fluid">
-		<ul class="nav">
-		 	<li class="nav-item">
-		    	<a class="nav-link disabled" href="#">GokiSoft</a>
-		  	</li>
-		  	<li class="nav-item">
-		    	<a class="nav-link disabled" href="#">Trang chủ</a>
-		  	</li>
-		  	<li class="nav-item dropdown">
-			    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">DS khóa học</a>
-			    <div class="dropdown-menu">
-			      <a class="dropdown-item disabled" href="#">HTML</a>
-			      <a class="dropdown-item disabled" href="#">Lập trình C</a>
-			      <a class="dropdown-item disabled" href="#">Bootstrap</a>
-			    </div>
-			</li>
-		  	<li class="nav-item">
-		    	<a class="nav-link" href="#">Góc lập trình</a>
-		  	</li>
-		  	<li><i class="far fa-user"></i></li>
-		  	<li class="nav-item">
-		    	<a class="nav-link" style="" href="#">Dang ki</a>
-		  	</li>
-		  	
-		  	<li class="nav-item">
-		    	<a class="nav-link" href="#"><i class="fas fa-sign-in-alt"></i>Dang nhap</a>
-		  	</li>
-		</ul>
+		<div class="nav nav-tabs" style="background-color: black; color: white">
+			<ul class="nav">
+			 	<li class="nav-item">
+			    	<a class="nav-link disabled" href="#">GokiSoft</a>
+			  	</li>
+			  	<li class="nav-item">
+			    	<a class="nav-link disabled" href="#">Trang chủ</a>
+			  	</li>
+			  	<li class="nav-item dropdown">
+				    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">DS khóa học</a>
+				    <div class="dropdown-menu">
+				      <a class="dropdown-item disabled" href="#">HTML</a>
+				      <a class="dropdown-item disabled" href="#">Lập trình C</a>
+				      <a class="dropdown-item disabled" href="#">Bootstrap</a>
+				    </div>
+				</li>
+			  	<li class="nav-item">
+			    	<a class="nav-link" href="#">Góc lập trình</a>
+			  	</li>
+			  	<li class="nav-item" style="margin-left: 300px; display: flex;">
+					<a href="#" class="nav-link disabled"><i class="fas fa-user-alt" style="font-size: 14px;"></i>DangKy</a>
+					<a href="#" class="nav-link disabled"><i class="fas fa-sign-in-alt"></i>Dang Nhap</a>
+				</li>
+			</ul>
+		</div>
 	</div>
-	<div class="container">
-		<div class="panel panel-primary">
-			<div class="panel-body">
-				<table class="table table-bordered table-hover">
-					<div class="panel-heading" style="background-color: blue ">
-						<i class="fas fa-cloud"></i>Quan Ly Thong Tin Sinh Vien
-					</div>
-					<table class="table table-bordered table-hover">
-						<thead>
-							<tr>
-								<th>No</th>
-								<th>Fullname</th>
-								<th>Age</th>
-								<th>Email</th>
-								<th>Phone Number</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>1</td>
-								<td>TRAN VAN DIEP</td>
-								<th>31</th>
-								<td>tranvandiep.it@gmail.com</td>
-								<td>123445345</td>
-							</tr>
-							<tr>
-								<td>2</td>
-								<td>TRAN VAN DIEP</td>
-								<th>31</th>
-								<td>tranvandiep.it@gmail.com</td>
-								<td>123445345</td>
-							</tr>
-							<tr>
-								<td>3</td>
-								<td>TRAN VAN DIEP</td>
-								<th>31</th>
-								<td>tranvandiep.it@gmail.com</td>
-								<td>123445345</td>
-							</tr>
-							<tr>
-								<td>4</td>
-								<td>TRAN VAN DIEP</td>
-								<th>31</th>
-								<td>tranvandiep.it@gmail.com</td>
-								<td>123445345</td>
-							</tr>
-							<tr>
-								<td>5</td>
-								<td>TRAN VAN DIEP</td>
-								<th>31</th>
-								<td>tranvandiep.it@gmail.com</td>
-								<td>123445345</td>
-							</tr>
-						</tbody>
-					</table>
-				<P
+	<div class="container" style="margin-top: 5%">
+		<div class="card">
+			<div class="card-header bg-primary" style="color: white">Quan ly thong tin sinh vien</div>
+			<div class="card-body">
+			<table class="table table-bordered table-hover">
+				<thead>
+					<tr>
+						<th>No</th>
+						<th>Fullname</th>
+						<th>Age</th>
+						<th>Email</th>
+						<th>Phone Number</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>1</td>
+						<td>TRAN VAN DIEP</td>
+						<th>31</th>
+						<td>tranvandiep.it@gmail.com</td>
+						<td>123445345</td>
+					</tr>
+					<tr>
+						<td>2</td>
+						<td>TRAN VAN DIEP</td>
+						<th>31</th>
+						<td>tranvandiep.it@gmail.com</td>
+						<td>123445345</td>
+					</tr>
+					<tr>
+						<td>3</td>
+						<td>TRAN VAN DIEP</td>
+						<th>31</th>
+						<td>tranvandiep.it@gmail.com</td>
+						<td>123445345</td>
+					</tr>
+					<tr>
+						<td>4</td>
+						<td>TRAN VAN DIEP</td>
+						<th>31</th>
+						<td>tranvandiep.it@gmail.com</td>
+						<td>123445345</td>
+					</tr>
+					<tr>
+						<td>5</td>
+						<td>TRAN VAN DIEP</td>
+						<th>31</th>
+						<td>tranvandiep.it@gmail.com</td>
+						<td>123445345</td>
+					</tr>
+				</tbody>
+			</table>
 			</div>
 		</div>
 </body>
