--- a/Lesson11/bai2.html
+++ b/Lesson11/bai2.html
@@ -2,8 +2,274 @@
 <html>
 <head>
 	<title></title>
+	<meta charset="utf-8">
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+
+	<!-- jQuery library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+	<!-- Popper JS -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+	<!-- Latest compiled JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+	<meta name='viewport' content='width=device-width, initial-scale=1'>
+	<script src='https://kit.fontawesome.com/a076d05399.js'></script>
 </head>
 <body>
+	<div class="row" style="font-size: small;">
+		<div class="nav nav-tabs" style="background-color: black; color: white">
+			<ul class="nav">
+			 	<li class="nav-item">
+			    	<a class="nav-link disabled" href="#">Hàng thật - Giá chuẩn - Phục vụ tận tâm</a>
+			  	</li>
+			  	<li class="nav-item" style="margin-left: 225px; display: flex;">
+					<a href="#" class="nav-link disabled"><i class="fas fa-phone" style="color: orange"></i>Hotline: 093 563 5754 - 093 563 5754 - 093 563 5754</a>
+				</li>
+				<li>
+					<form class="form-inline">
+		    			<input class="form-control mr-sm-2" type="text" placeholder="Từ khóa tìm kiếm">
+                		<button class="btn btn-outline-warning my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>			  	
+                	</form>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<div class="container">
+		<ul class="nav">
+			<li style="margin-top: 1%">DONGHOSOMOT.COM</li>
+		 	<li class="nav-item" style="margin-left: 13%">
+		    	<a class="nav-link disabled" href="#"><i class="fas fa-home"></i>ĐỒNG HỒ NAM | ĐỒNG HỒ NỮ | ĐỒNG HỒ ĐÔI | MẪU HOT NHẤT | SALE | BLOG</a>
+		  	</li>
+		</ul>
+	</div>
 
+	<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+	  <div class="carousel-inner">
+	    <div class="carousel-item active">
+	      <img class="d-block w-100" src="https://res.cloudinary.com/wegoup/image/upload/v1604027906/pxcah94ve1bzhp7a8ous.jpg" alt="First slide">
+	    </div>
+	    <div class="carousel-item">
+	      <img class="d-block w-100" src="https://res.cloudinary.com/wegoup/image/upload/v1604027902/zqsydf2cioamp3yytgtd.jpg" alt="Second slide">
+	    </div>
+	    <div class="carousel-item">
+	      <img class="d-block w-100" src="https://res.cloudinary.com/wegoup/image/upload/v1604027901/rlic67yh7qkbhlyfpbp5.jpg" alt="Third slide">
+	    </div>
+	  </div>
+	</div>
+	
+	<div class="row">
+		<div class="col-md-3">
+			<ul class="nav nav-pills flex-column" style="background-color: black">
+		        <li class="nav-item">
+		          	<a class="nav-link" href="#">Danh mục sản phẩm </a>
+		        </li>
+		        <li class="nav-item">
+		          	<a class="nav-link" href="#">Edox</a>
+		        </li>
+		        <li class="nav-item">
+		          	<a class="nav-link" href="#">Michael Kor</a>
+		        </li>
+		        <li class="nav-item">
+		          	<a class="nav-link" href="#">Marc by Marc Jacob</a>
+		        </li>
+		        <li class="nav-item">
+		          	<a class="nav-link" href="#">Burberry</a>
+		        </li>
+		        <li class="nav-item">
+		          	<a class="nav-link" href="#">Calvin Klein</a>
+		        </li>       
+		        <li class="nav-item">
+		         	<a class="nav-link" href="#">Gucci</a>
+		        </li>
+		        <li class="nav-item">
+		         	<a class="nav-link" href="#">Hamilton</a>
+		        </li>
+		        <li class="nav-item">
+		         	<a class="nav-link" href="#">Omega</a>
+		        </li>                                    
+		    </ul>
+	  	</div>
+  		<div class="col-md-9" style="margin-top: 3%">
+  			<div class="row">
+  				<div class="col-md-3">
+  					<img src="https://res.cloudinary.com/wegoup/image/upload/v1604027903/hecivsgz6gylq2u246rf.jpg" style="width: 95%">
+  					<p><center>Đồng Hồ Nam Thụy Sỹ</center></p>
+  					<button style="width: 200px; background-color: black;">
+  						<a href="#" class="nav-link" style="color: white">
+  							Giá: Liên hệ
+  							<i class="fas fa-phone-volume" style="margin-left: 30%"></i>
+  						</a>
+  					</button>
+  				</div>
+  				<div class="col-md-3">
+  					<img src="https://res.cloudinary.com/wegoup/image/upload/v1604027903/hecivsgz6gylq2u246rf.jpg" style="width: 95%">
+  					<p><center>Đồng Hồ Nam Thụy Sỹ</center></p>
+  					<button style="width: 200px; background-color: black;">
+  						<a href="#" class="nav-link" style="color: white">
+  							Giá: Liên hệ
+  							<i class="fas fa-phone-volume" style="margin-left: 30%"></i>
+  						</a>
+  					</button>
+  				</div>
+  				<div class="col-md-3">
+  					<img src="https://res.cloudinary.com/wegoup/image/upload/v1604027903/hecivsgz6gylq2u246rf.jpg" style="width: 95%">
+  					<p><center>Đồng Hồ Nam Thụy Sỹ</center></p>
+  					<button style="width: 200px; background-color: black;">
+  						<a href="#" class="nav-link" style="color: white">
+  							Giá: Liên hệ
+  							<i class="fas fa-phone-volume" style="margin-left: 30%"></i>
+  						</a>
+  					</button>
+  				</div>
+  				<div class="col-md-3">
+  					<img src="https://res.cloudinary.com/wegoup/image/upload/v1604027903/hecivsgz6gylq2u246rf.jpg" style="width: 95%">
+  					<p><center>Đồng Hồ Nam Thụy Sỹ</center></p>
+  					<button style="width: 200px; background-color: black;">
+  						<a href="#" class="nav-link" style="color: white">
+  							Giá: Liên hệ
+  							<i class="fas fa-phone-volume" style="margin-left: 30%"></i>
+  						</a>
+  					</button>
+  				</div>
+  				<div class="col-md-3">
+  					<img src="https://res.cloudinary.com/wegoup/image/upload/v1604027903/hecivsgz6gylq2u246rf.jpg" style="width: 95%">
+  					<p><center>Đồng Hồ Nam Thụy Sỹ</center></p>
+  					<button style="width: 200px; background-color: black;">
+  						<a href="#" class="nav-link" style="color: white">
+  							Giá: Liên hệ
+  							<i class="fas fa-phone-volume" style="margin-left: 30%"></i>
+  						</a>
+  					</button>
+  				</div>
+  				<div class="col-md-3">
+  					<img src="https://res.cloudinary.com/wegoup/image/upload/v1604027903/hecivsgz6gylq2u246rf.jpg" style="width: 95%">
+  					<p><center>Đồng Hồ Nam Thụy Sỹ</center></p>
+  					<button style="width: 200px; background-color: black;">
+  						<a href="#" class="nav-link" style="color: white">
+  							Giá: Liên hệ
+  							<i class="fas fa-phone-volume" style="margin-left: 30%"></i>
+  						</a>
+  					</button>
+  				</div>
+  				<div class="col-md-3">
+  					<img src="https://res.cloudinary.com/wegoup/image/upload/v1604027903/hecivsgz6gylq2u246rf.jpg" style="width: 95%">
+  					<p><center>Đồng Hồ Nam Thụy Sỹ</center></p>
+  					<button style="width: 200px; background-color: black;">
+  						<a href="#" class="nav-link" style="color: white">
+  							Giá: Liên hệ
+  							<i class="fas fa-phone-volume" style="margin-left: 30%"></i>
+  						</a>
+  					</button>
+  				</div>
+  				<div class="col-md-3">
+  					<img src="https://res.cloudinary.com/wegoup/image/upload/v1604027903/hecivsgz6gylq2u246rf.jpg" style="width: 95%">
+  					<p><center>Đồng Hồ Nam Thụy Sỹ</center></p>
+  					<button style="width: 200px; background-color: black;">
+  						<a href="#" class="nav-link" style="color: white">
+  							Giá: Liên hệ
+  							<i class="fas fa-phone-volume" style="margin-left: 30%"></i>
+  						</a>
+  					</button>
+  				</div>
+  				<div class="col-md-3">
+  					<img src="https://res.cloudinary.com/wegoup/image/upload/v1604027903/hecivsgz6gylq2u246rf.jpg" style="width: 95%">
+  					<p><center>Đồng Hồ Nam Thụy Sỹ</center></p>
+  					<button style="width: 200px; background-color: black;">
+  						<a href="#" class="nav-link" style="color: white">
+  							Giá: Liên hệ
+  							<i class="fas fa-phone-volume" style="margin-left: 30%"></i>
+  						</a>
+  					</button>
+  				</div>
+  				<div class="col-md-3">
+  					<img src="https://res.cloudinary.com/wegoup/image/upload/v1604027903/hecivsgz6gylq2u246rf.jpg" style="width: 95%">
+  					<p><center>Đồng Hồ Nam Thụy Sỹ</center></p>
+  					<button style="width: 200px; background-color: black;">
+  						<a href="#" class="nav-link" style="color: white">
+  							Giá: Liên hệ
+  							<i class="fas fa-phone-volume" style="margin-left: 30%"></i>
+  						</a>
+  					</button>
+  				</div>
+  				<div class="col-md-3">
+  					<img src="https://res.cloudinary.com/wegoup/image/upload/v1604027903/hecivsgz6gylq2u246rf.jpg" style="width: 95%">
+  					<p><center>Đồng Hồ Nam Thụy Sỹ</center></p>
+  					<button style="width: 200px; background-color: black;">
+  						<a href="#" class="nav-link" style="color: white">
+  							Giá: Liên hệ
+  							<i class="fas fa-phone-volume" style="margin-left: 30%"></i>
+  						</a>
+  					</button>
+  				</div>
+  				<div class="col-md-3">
+  					<img src="https://res.cloudinary.com/wegoup/image/upload/v1604027903/hecivsgz6gylq2u246rf.jpg" style="width: 95%">
+  					<p><center>Đồng Hồ Nam Thụy Sỹ</center></p>
+  					<button style="width: 200px; background-color: black;">
+  						<a href="#" class="nav-link" style="color: white">
+  							Giá: Liên hệ
+  							<i class="fas fa-phone-volume" style="margin-left: 30%"></i>
+  						</a>
+  					</button>
+  				</div>
+  				<div class="col-md-3">
+  					<img src="https://res.cloudinary.com/wegoup/image/upload/v1604027903/hecivsgz6gylq2u246rf.jpg" style="width: 95%">
+  					<p><center>Đồng Hồ Nam Thụy Sỹ</center></p>
+  					<button style="width: 200px; background-color: black;">
+  						<a href="#" class="nav-link" style="color: white">
+  							Giá: Liên hệ
+  							<i class="fas fa-phone-volume" style="margin-left: 30%"></i>
+  						</a>
+  					</button>
+  				</div>
+  				<div class="col-md-3">
+  					<img src="https://res.cloudinary.com/wegoup/image/upload/v1604027903/hecivsgz6gylq2u246rf.jpg" style="width: 95%">
+  					<p><center>Đồng Hồ Nam Thụy Sỹ</center></p>
+  					<button style="width: 200px; background-color: black;">
+  						<a href="#" class="nav-link" style="color: white">
+  							Giá: Liên hệ
+  							<i class="fas fa-phone-volume" style="margin-left: 30%"></i>
+  						</a>
+  					</button>
+  				</div>
+  				<div class="col-md-3">
+  					<img src="https://res.cloudinary.com/wegoup/image/upload/v1604027903/hecivsgz6gylq2u246rf.jpg" style="width: 95%">
+  					<p><center>Đồng Hồ Nam Thụy Sỹ</center></p>
+  					<button style="width: 200px; background-color: black;">
+  						<a href="#" class="nav-link" style="color: white">
+  							Giá: Liên hệ
+  							<i class="fas fa-phone-volume" style="margin-left: 30%"></i>
+  						</a>
+  					</button>
+  				</div>
+  				<div class="col-md-12" style="margin-top: 3%">
+					<ul class="pagination">
+					  <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+					  <li class="page-item"><a class="page-link" href="#">1</a></li>
+					  <li class="page-item"><a class="page-link" href="#">2</a></li>
+					  <li class="page-item"><a class="page-link" href="#">3</a></li>
+					  <li class="page-item"><a class="page-link" href="#">Next</a></li>
+					</ul>
+				</div>
+  			</div>
+  		</div>	
+	</div>
+	<div class="row" style="margin-top: 5%; background-color: #d9dbde">
+		<table style="width: 1000px; margin-left:3%">
+			<tr>
+				<th>DONGHOSOMOT.COM</th>
+				<th>ĐỒNG HỒ SỐ MỘT</th>
+				<th>HỖ TRỢ KHÁCH HÀNG</th>
+				<th>THANH TOÁN</th>
+			</tr>
+			<tr><th>
+				<div class="col-md-12">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.0974938515083!2d105.77963881422536!3d21.02878468599839!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x313454b32ecb92db%3A0x3964e6238a3bd088!2zOCBUw7RuIFRo4bqldCBUaHV54bq_dCwgTeG7uSDEkMOsbmgsIEPhuqd1IEdp4bqleSwgSMOgIE7hu5lpLCBWaWV0bmFt!5e0!3m2!1sen!2s!4v1604043977876!5m2!1sen!2s" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" tabindex="0"></iframe>
+					</div>
+			</th></tr>
+		</table>
+	</div>
 </body>
 </html>
