--- a/Lesson06/findmax.html
+++ b/Lesson06/findmax.html
@@ -13,7 +13,7 @@
 		arr1.sort(function(a, b) {
 			return a - b
 		})
-		document.type("So Lon Nhat: " + arr1[arr1.length - 1])
+		document.write("So Lon Nhat: " + arr1[arr1.length - 1])
 	</script>
 </body>
 </html>
