--- a/Lesson12/gokisoft.html
+++ b/Lesson12/gokisoft.html
@@ -21,7 +21,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-	<div class="row bg-dark" style="color: white">
+	<div id="top" class="row bg-dark" style="color: white">
 		<ul class="nav">
 		 	<li class="nav-item">
 		 		<a class="nav-link disabled" href="#"><img src="https://www.gravatar.com/avatar/d3d863d6f47708501814fb41e9c38f31.jpg?s=80&d=mm&r=g" width="35" height="35" style="border-radius: 50%"></a>
@@ -521,5 +521,26 @@
 			<a href="#" style="color: green">Copyright 2019 All rights reserved</a>
 		</center>
 	</div>
+	<div class="fixed-bottom">
+		<button style="float: right" class="rounded-circle bg-danger text-white"><i class="fas fa-plus fa-lg"></i></button><br><br>
+		<button style="float: right" class="rounded-circle bg-info mb-3 text-white"><i class="fa fa-question-circle fa-lg"></i></button><br><br>
+		<button style="float: right" id="totop" class="bg-success">
+			<a href="#top">
+				<i class="fas fa-angle-up text-white"></i>
+			</a>
+		</button>
+	</div>
+	<script type="text/javascript">
+		var prevScrollpos = window.pageYOffset;
+		window.onscroll = function() {
+		  var currentScrollPos = window.pageYOffset;
+		  if (prevScrollpos > currentScrollPos) {
+		    document.getElementById("totop").style.bottom = "0";
+		  } else {
+		    document.getElementById("totop").style.bottom = "-50px";
+		  }
+		  prevScrollpos = currentScrollPos;
+		}
+	</script>
 </body>
 </html>
