--- a/Lesson13/sample_thaotactag.html
+++ b/Lesson13/sample_thaotactag.html
@@ -107,7 +107,7 @@
 				$('#product_items').append(`<div class="col-md-3" onclick="clickItem(${i})" style="cursor: pointer">
 						<img src="${dataList[i].thumbnail}" width="100%">
 						<p style="text-align: center;">${dataList[i].title}</p>
-						<p style="text-align: center;">${dataList[i].price} VND</p>
+						<p style="text-align: center;">$'$'{dataList[i].price}</p>
 					</div>`)
 			}
 		}
