--- a/Lesson13/vidu.html
+++ b/Lesson13/vidu.html
@@ -103,6 +103,10 @@
 		function addUser() {
 			//binh thuong
 		}
+
+		for (var i = 0; i < Things.length; i++) {
+			Things[i]
+		}
 	</script>
 </body>
 </html>
